src/sass/components/_projects.scss
.project {
    &__container {
        background: rgba(255, 255, 255, 0.192);
        color: white;
        border-radius: .2rem;
        min-height: 120vh;
        width: 95vw;
        padding-top: 2rem;
        margin-top: 10rem;

        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    &__header {
        text-transform: uppercase;
        font-weight: 500;
        text-align: center;
        // background: blue;
        height: 10%;
        width: 100%;
    }

    &__card-container {
        // background: orangered;
        height: 90%;
        width: 100%;
        padding: 2rem;

        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
        grid-gap: 2rem;
        grid-row-gap: 4rem;

        align-items: center;
        justify-items: center;


        overflow: scroll;

    }

    &__card {
        width: 20rem;
        margin-bottom: 0;
        height: 20rem;
        background: white;
        border-radius: .2rem;
        overflow: hidden;
        position: relative;
        transition: all .2s;

        &:hover {
            transform: scale(1.02) translateY(-1rem);
            box-shadow: $box-shadow;
        }

        &:hover>div {
            // transform: scale(1.3);
        }

        &:hover .project__card-name {
            opacity: 1;
            height: 20%;
            width: 100%;
        }
    }

    &__card-image {
        width: 100%;
        height: 100%;

        background-repeat: no-repeat;
        background-position: center;
        background-size: contain;
        background-size: cover;
        transition: all .2s;
        position: relative;
        z-index: 0;
    }

    &__card-name {
        position: absolute;
        display: flex;
        justify-content: center;
        align-items: center;
        top: 0%;
        height: 0;
        width: 0%;
        font-weight: 600;
        background: rgba(100, 195, 250, 0.993);

        z-index: 3;
        opacity: 0;
        text-align: center;
        vertical-align: center;
        transition: all .2s;
    }
}

.card-image {
    &--1 {
        background-image: url('../static/trailfinder.png');
        transform: scale(1.01);
        transition: all.4s;

        &:hover {
            background-image: url('../static/trailview.png');


        }
    }

    &--2 {
        background-image: url('../static/colors.png');


        &:hover {
            background-image: url('../static/colors2.png');

        }
    }

    &--3 {
        background-image: url('../static/shell1.png');

        &:hover {
            background-image: url('../static/shell2.png');

        }
    }

    &--4 {
        background-image: url('../static/airbnb1.png');

        &:hover {
            background-image: url('../static/airbnb2.png');


        }
    }

    &--5 {
        color: rgba(100, 195, 250, 0.993);
        display: flex;
        justify-content: center;
        align-items: center;
    }

    &--6 {
        color: rgba(100, 195, 250, 0.993);
        display: flex;
        justify-content: center;
        align-items: center;
    }
}

// .project__card:nth-child(even) .project__card-name {
//     background: rgba(255, 255, 255, 0.945);
//     color: rgba(100, 195, 250, 0.925)
// }

